force-app/main/default/objects/Conta_Pessoal__c/Conta_Pessoal__c.object-meta.xml
<CustomObject>
    <label>Conta Pessoal</label>
    <nameField>
        <label>Nome de Conta Pessoal</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contas Pessoais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>