force-app/main/default/objects/Conta_Pessoal__c/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Conta_Pessoal__c</field>
            <operation>equals</operation>
            <value>01IP0000001DwDb</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Conta_Pessoal__c</referenceTo>
    <relationshipLabel>Contas Pessoais (Conta P)</relationshipLabel>
    <relationshipName>Contas_Pessoais1</relationshipName>
    <type>Lookup</type>
</CustomField>