force-app/main/default/objects/Conta_Pessoal__c/fields/Conta_Pessoal__c.field-meta.xml
<CustomField>
    <fullName>Conta_Pessoal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Conta Pessoal</label>
    <referenceTo>Conta_Pessoal__c</referenceTo>
    <relationshipLabel>Contas Pessoais</relationshipLabel>
    <relationshipName>Contas_Pessoais</relationshipName>
    <type>Lookup</type>
</CustomField>