force-app/main/default/objects/Conta_Pessoal__c/recordTypes/Branch.recordType-meta.xml
<RecordType>
    <fullName>Branch</fullName>
    <active>true</active>
    <label>Branch</label>
</RecordType>