force-app/main/default/objects/Conta_Pessoal__c/recordTypes/Cliente_PF.recordType-meta.xml
<RecordType>
    <fullName>Cliente_PF</fullName>
    <active>true</active>
    <label>Cliente PF</label>
</RecordType>